--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -11,3 +11,11 @@ body{
     font-size: 1.6rem;
     font-family: Helvetica, Arial, sans-serif;
 }
+
+button{
+    cursor: pointer;
+}
+
+button:disabled{
+    cursor: default;
+}
