finished styling the app including all of the components and the 3rd party module which is the modal. Also added extra scss for supporting mobile devices.

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,7 +6,7 @@
     color: white;
     font-weight: bold;
     font-size: $l-size;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-size;
     padding: 2.4rem;
     width: 100%;
 }
@@ -29,4 +29,11 @@
     border: none;
     color: $off-white;
     padding: 0%;
+}
+
+// larger sized screens
+@media(min-width: 45rem){
+    .big-button{
+        margin-bottom: $xl-size;
+    }
 }
