--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,10 @@
 // imported scss base file which is a partial. when doing so the _ and extension is left out
 @import "./base/settings";
 @import "./base/base";
+@import "./components/add-option";
 @import "./components/container";
 @import "./components/header";
 @import "./components/button";
+@import "./components/modal";
+@import "./components/widget";
+@import "./components/option"; 
