--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -7,7 +7,7 @@
 
 // BEM Block Element Modifier naming convention
 .header__title{
-    font-size: $l-size;
+    font-size: $m-size;
     margin: 0%;
 }
 
@@ -16,4 +16,16 @@
     font-size: $m-size;
     font-weight: 500;
     margin: 0%;
+}
+
+// larger sized screens
+@media(min-width: 45rem){
+    .header{
+        margin-bottom: $xl-size; 
+    }
+
+    .header__title{
+        font-size: $xl-size;
+        margin: 0%;
+    }
 }
